# BlueVK

./: CMakeLists.txt  README.md
assets/shaders/: gradient_color.comp  shader.comp  triangle.frag  triangle.vert
include/: engine.hpp  types.hpp  vk_builders.hpp  vk_images.hpp  vk_initializers.hpp  vk_pipelines.hpp
include/BlueVK/: BlueVK.hpp
include/BlueVK/Builders/: CommandBuffer.hpp  DescriptorSet.hpp  Image.hpp  SyncStructs.hpp
include/BlueVK/Core/: DeletionQueue.hpp  Frame.hpp  Helpers.hpp  Types.hpp
include/BlueVK/Platform/: Platform.hpp
src/: engine.cpp  main.cpp  vk_builders.cpp  vk_images.cpp  vk_initializers.cpp  vk_pipelines.cpp
src/BlueVK/: BlueVK.cpp
src/BlueVK/Builders/: CommandBuffer.cpp  DescriptorSet.cpp  Image.cpp  SyncStructs.cpp
src/BlueVK/Core/: Helpers.cpp
src/BlueVK/Platform/: PlatformLinux.cpp  PlatformWindows.cpp
